crates/typecheck/tests/fixtures/errors/match_arm_type_mismatch.ax
enum Shape { Circle(Float), Rect(Float, Float) }
fn area(s: Shape) -> Float {
    match s {
        Circle(r) => r
        Rect(w, h) => h == w
    }
}
